--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="derecha-cards">
                     <div class="flex segunda-con-boton">
                         <h2 class="titulo-cards">psicotécnicos</h2>
-                        <button class="segundo-boton"><a class="wasp1" href="./psicotecnicos.html"></a>ver más</button>
+                        <button class="segundo-boton"><a class="wsp1" href="./psicotecnicos.html">ver más</a></button>
                     </div>
                     <h3 class="texto-cards">Me especializo en psictécnicos de bla bla bla qué lindo piki piki y sigo acá hablando por hablar. </h3>
                 </div>
